...
    <item
        android:id="@+id/action_change_password"
        android:title="Change Password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="Logout"
        app:showAsAction="never" />
</menu>

